deploy/podinfo/podinfo-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: podinfo
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: semver:>3.0.1
    flux.weave.works/automated: 'true'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
